footer scroll fix, jumpy mountains fix

--- a/src/assets/stylesheets/partone.css
+++ b/src/assets/stylesheets/partone.css
@@ -24,6 +24,7 @@
    position: fixed;
    bottom: 0;
    left: 0;
+   min-width: 100vw;
 }
 .partone__title {
     position: absolute;
